# Progamacao_C_Fichas

./: CMakeLists.txt  README.md  main.c
.github/workflows/: c-cpp.yml
Aula1/: P2425_Aula1_Ficha1.c
Aula2/: ficha2_Matrizes.c  ficha2_Strings.c
Aula3/: Ficha3.c
Aula4/: Aula4.c  Aula4_exs_12_13_14.c
Aula5/: main.c  ponto.c  retangulo.c
Aula6/: CMakeLists.txt  main.c  ponto.c  retangulo.c  retangulo.h  tabela.c  tabela.h
Desafio1/: 2021142024 _desafio1.c
Desafio2/: funcao.c  funcao.h  main.c
Ficha10/: parque.c  parque.h
Ficha5/: CMakeLists.txt  main.c  ponto.c  ponto.h  retangulo.c
Ficha6/: CMakeLists.txt  main.c  ponto.c  retangulo.c  retangulo.h  tabela.c  tabela.h
Ficha7/: CMakeLists.txt  agenda.c  main.c
Ficha8/Ex1/: ex1.c
Ficha8/Ex2/: EX2 & EX3  main.c
Ficha8/Ex4&Ex5/: main.c
Testes/Teste_23_24/: main.c
